--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
         <div class="footer-form">
           <p class="footer-text">Подпишитесь на рассылку</p>
-          <form action="" class="form-footer">
+          <form class="form-footer">
             <input
               type="email"
               name="user-mail"
@@ -452,7 +452,7 @@
         <p class="form-wrapper-text">
           Оставьте свои данные, мы вам перезвоним
         </p>
-        <form action="">
+        <form>
           <div class="modal-form">
             <label for="name">Имя</label>
             <svg class="modal-svg">
@@ -515,7 +515,7 @@
             />
             <label class="checkbox-label" for="checkbox"
               >Соглашаюсь с рассылкой и принимаю
-              <a class="checkbox-link" href="" _target="black"
+              <a class="checkbox-link" href="" target="_blank"
                 >Условия договора</a
               ></label
             >
