--- a/portfolio.html
+++ b/portfolio.html
@@ -343,7 +343,7 @@
 
         <div class="footer-form">
           <p class="footer-text">Подпишитесь на рассылку</p>
-          <form action="" class="form-footer">
+          <form class="form-footer">
             <input
               type="email"
               name="user-mail"
