--- a/portfolio.html
+++ b/portfolio.html
@@ -58,19 +58,19 @@
           <h1 hidden>Наши работы</h1>
           <ul class="filter">
             <li class="filter-list">
-              <button class="btn" type="button">Все</button>
+              <button class="btn-filter" type="button">Все</button>
             </li>
             <li class="filter-list">
-              <button class="btn" type="button">Веб-сайты</button>
+              <button class="btn-filter" type="button">Веб-сайты</button>
             </li>
             <li class="filter-list">
-              <button class="btn" type="button">Приложения</button>
+              <button class="btn-filter" type="button">Приложения</button>
             </li>
             <li class="filter-list">
-              <button class="btn" type="button">Дизайн</button>
+              <button class="btn-filter" type="button">Дизайн</button>
             </li>
             <li class="filter-list">
-              <button class="btn" type="button">Маркетинг</button>
+              <button class="btn-filter" type="button">Маркетинг</button>
             </li>
           </ul>
 
@@ -351,7 +351,7 @@
               required
               placeholder="E-mail"
             />
-            <button type="submit" class="footer-btn-form telegram">
+            <button type="submit" class="btn telegram">
               Подписаться
             </button>
           </form>
