--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link
@@ -19,38 +20,48 @@
 
     <header>
       <div class="container wrapper">
-        <nav>
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="site-nav-item">
-              <a href="./index.html" class="link current">Студия</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+
+        <button class="burger-button" data-menu-button aria-expanded="false" aria-controls="menu-wrapper">
+          <svg width="40" height="40">
+            <use class="menu-btn-close" href="./images/sprite1.svg#close-burger"></use>
+            <use class="menu-btn-open" href="./images/sprite1.svg#open-burger"></use>
+          </svg>
+        </button>
+
+        <div class="menu-wrapper" data-menu>
+          <nav>
+            <ul class="site-nav list">
+              <li class="site-nav-item">
+                <a href="./index.html" class="link current">Студия</a>
+              </li>
+              <li class="site-nav-item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </nav>
+
+          <ul class="auth-nav list">
+            <li class="auth-nav-item">
+              <a class="adress-link" href="mailto:info@devstudio.com">
+                <svg width="16" height="12">
+                  <use href="./images/sprite1.svg#icon-imail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
-            <li>
-              <a href="./portfolio.html" class="link">Портфолио</a>
+
+            <li class="auth-nav-item">
+              <a class="adress-link" href="tel:+380961111111"
+                ><svg width="12" height="16">
+                  <use href="./images/sprite1.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
-            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
           </ul>
-        </nav>
-
-        <ul class="auth-nav list">
-          <li>
-            <a class="adress-link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12">
-                <use href="./images/sprite1.svg#icon-imail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-
-          <li>
-            <a class="adress-link" href="tel:+380961111111"
-              ><svg width="12" height="16">
-                <use href="./images/sprite1.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
@@ -132,7 +143,7 @@
           <ul class="team">
             <li class="team-list">
               <a href="#">
-                <img src="./images/teamer-1.jpg" alt="crew" width="270" height="260" />
+                <img src="./images/teamer-1.jpg" alt="crew" />
                 <h3>Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
               </a>
@@ -171,7 +182,7 @@
 
             <li class="team-list">
               <a href="#">
-                <img src="./images/teamer-2.jpg" alt="crew" width="270" height="260" />
+                <img src="./images/teamer-2.jpg" alt="crew" />
                 <h3>Ольга Репина</h3>
                 <p class="team-text">Frontend Developer</p>
               </a>
@@ -209,7 +220,7 @@
 
             <li class="team-list">
               <a href="#">
-                <img src="./images/teamer-3.jpg" alt="crew" width="270" height="260" />
+                <img src="./images/teamer-3.jpg" alt="crew" />
                 <h3>Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
               </a>
@@ -247,7 +258,7 @@
 
             <li class="team-list">
               <a href="#">
-                <img src="./images/teamer-4.jpg" alt="crew" width="270" height="260" />
+                <img src="./images/teamer-4.jpg" alt="crew" />
                 <h3>Михаил Ермаков</h3>
                 <p class="team-text">UI Designer</p>
               </a>
@@ -360,28 +371,28 @@
         <div class="footer-link">
           <p class="footer-text">Присоединяйтесь</p>
           <ul class="footer-list">
-            <li class="fooler-list-item">
+            <li class="footer-list-item">
               <a href="" class="footer-list-link">
                 <svg>
                   <use href="./images/sprite1.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="fooler-list-item">
+            <li class="footer-list-item">
               <a href="" class="footer-list-link">
                 <svg>
                   <use href="./images/sprite1.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="fooler-list-item">
+            <li class="footer-list-item">
               <a href="" class="footer-list-link">
                 <svg>
                   <use href="./images/sprite1.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="fooler-list-item">
+            <li class="footer-list-item">
               <a href="" class="footer-list-link">
                 <svg>
                   <use href="./images/sprite1.svg#icon-linkedin"></use>
@@ -457,5 +468,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
