--- a/portfolio.html
+++ b/portfolio.html
@@ -15,41 +15,50 @@
 
     <header>
       <div class="container wrapper">
-        <nav>
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="site-nav-item">
-              <a href="./index.html" class="link">Студия</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+
+        <button class="burger-button" data-menu-button aria-expanded="false" aria-controls="menu-wrapper">
+          <svg width="40" height="40">
+            <use class="menu-btn-close" href="./images/sprite1.svg#close-burger"></use>
+            <use class="menu-btn-open" href="./images/sprite1.svg#open-burger"></use>
+          </svg>
+        </button>
+
+        <div class="menu-wrapper" data-menu>
+          <nav>
+            <ul class="site-nav list">
+              <li class="site-nav-item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="site-nav-item">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </nav>
+
+          <ul class="auth-nav list">
+            <li class="auth-nav-item">
+              <a class="adress-link" href="mailto:info@devstudio.com">
+                <svg width="16" height="12">
+                  <use href="./images/sprite1.svg#icon-imail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
-            <li class="site-nav-item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+
+            <li class="auth-nav-item">
+              <a class="adress-link" href="tel:+380961111111"
+                ><svg width="12" height="16">
+                  <use href="./images/sprite1.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
-            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
           </ul>
-        </nav>
-
-        <ul class="auth-nav list">
-          <li>
-            <a class="adress-link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12">
-                <use href="./images/sprite1.svg#icon-imail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-
-          <li>
-            <a class="adress-link" href="tel:+380961111111"
-              ><svg width="12" height="16">
-                <use href="./images/sprite1.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
-
     <!-- Main -->
 
     <main>
@@ -84,10 +93,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -108,10 +115,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -132,10 +137,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -156,10 +159,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -180,10 +181,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -204,10 +203,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -228,10 +225,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -252,10 +247,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -276,10 +269,8 @@
 
                   <div class="overlay">
                     <p class="modal-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                 </div>
@@ -344,13 +335,7 @@
         <div class="footer-form">
           <p class="footer-text">Подпишитесь на рассылку</p>
           <form class="form-footer">
-            <input
-              type="email"
-              name="user-mail"
-              class="input-user-mail"
-              required
-              placeholder="E-mail"
-            />
+            <input type="email" name="user-mail" class="input-user-mail" required placeholder="E-mail" />
             <button type="submit" class="btn telegram">
               Подписаться
             </button>
@@ -366,5 +351,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
